feat: Players 최소 플레이어 검증 및 참가자 수 확인 기능 추가